# duckdb-loki

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: Integration.yml  MainDistributionPipeline.yml  Smoke.yml
src/: loki_extension.cpp
src/include/: loki_extension.hpp
src/include/loki/: auth.hpp  catalog.hpp  connection.hpp  http_client.hpp  http_request.hpp  logql.hpp  loki_discovery.hpp  loki_scan.hpp  loki_types.hpp  pager.hpp  parse.hpp  secret.hpp  time_bounds.hpp
src/loki/: auth.cpp  catalog.cpp  connection.cpp  http_client.cpp  http_request.cpp  logql.cpp  loki_discovery.cpp  loki_scan.cpp  pager.cpp  parse.cpp  secret.cpp  time_bounds.cpp
test/: README.md
test/cpp/: CMakeLists.txt  test_auth.cpp  test_discovery.cpp  test_logql.cpp  test_main.cpp  test_pager.cpp  test_parse.cpp  test_time_bounds.cpp  test_util.hpp
test/integration/: README.md  docker-compose.yml  run.sh  seed.sh
test/loadable/: README.md  run.sh
test/mock/: README.md  mock_loki.py  run.sh
test/sql/: loki.test  loki_attach.test  loki_mock.test
